--- a/server/src/.env
+++ b/server/src/.env
@@ -1,3 +1,5 @@
-DB_USER=postgres
-DB_PASSWORD=root
-DB_HOST=5432
+DB_USER= postgres
+DB_PASSWORD= root
+DB_HOST= localhost:5432 || http://localhost:5173
+DATABASE = rickandmorty
+
