--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
